--- a/style.css
+++ b/style.css
@@ -1199,3 +1199,52 @@ iframe {
     }
 
 }
+
+
+/* System Design Overview Styling */
+.system-design .description {
+    text-align: left;
+    max-width: 900px;
+    margin: auto;
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    color: black;
+}
+
+.system-design h2 {
+    font-size: 28px;
+    text-align: left;
+    margin-top: 40px;
+    color: black;
+}
+
+.system-design h3 {
+    text-align: left;
+    font-size: 22px;
+    margin-top: 30px;
+    border-bottom: 2px solid black;
+    padding-bottom: 5px;
+    color: black;
+}
+
+.system-design p {
+    text-align: left;
+    font-size: 16px;
+    margin-bottom: 15px;
+}
+
+.system-design ul {
+    text-align: left;
+    margin-left: 20px;
+    padding-left: 15px;
+}
+
+.system-design ul li {
+    text-align: left;
+    font-size: 16px;
+    margin-bottom: 5px;
+}
+
+.system-design strong {
+    color: #000;
+}
